feat(application/report): translate CORPT0AI symbolic map to CoRpt00Input record
Implements the Java 25 input DTO record translating the COBOL CORPT0AI
symbolic-map structure (lines 17-120 of app/cpy-bms/CORPT00.CPY) for the
Print-Transaction-Reports screen (CICS transaction CR00, online program
CORPT00C).

Schema-compliant implementation per the agent prompt:

* 11 record components (10 String + 1 sealed AidKey):
  - monthly / yearly / custom         (PIC X(1) report-type radios)
  - startMonth / startDay / startYear (PIC X(2) / X(2) / X(4))
  - endMonth / endDay / endYear       (PIC X(2) / X(2) / X(4))
  - confirmation                      (PIC X(1) Y/N)
  - aidKey                            (CcWorkAreas.AidKey, sealed, 16 permits)
* Compact canonical constructor (JEP 513 Flexible Constructor Bodies):
  - null String  -> empty String (COBOL SPACES/LOW-VALUES default)
  - null AidKey  -> NullPointerException (RECEIVE-MAP guarantees an AID)
  - over-length  -> IllegalArgumentException (throw not clamp; preserves
                    byte-for-byte SEND-MAP parity per AAP §0.6.5)
* empty() static factory returning a blank input with new AidKey.Enter()
  sentinel (first-entry / EIBCALEN=0 case)
* Six convenience predicates matching COBOL EVALUATE-TRUE chain semantics:
  - isMonthlySelected / isYearlySelected / isCustomSelected
    (COBOL: 'NOT = SPACES AND LOW-VALUES')
  - isConfirmYes / isConfirmNo / isConfirmBlank
    (COBOL: "= 'Y' OR 'y'" / "= 'N' OR 'n'" / "= SPACES OR LOW-VALUES")
* Single 'import module java.base' declaration (JEP 511)
* No Spring, no Lombok, no JPA, no preview features

Additionally fixes the in-scope CoRpt00C.java to compile against the new
CoRpt00Input API:

* CoRpt00Input.blank() -> CoRpt00Input.empty() (method rename)
* Local AidKey enum switch (ENTER/PF03_BACK/OTHER) -> exhaustive sealed
  switch over CcWorkAreas.AidKey (16 permits, no default branch per
  AAP §0.6.10): AidKey.Enter routes to processEnterKey, AidKey.PfKey03
  routes to RETU